# microservice

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: alembic.ini  start.sh
app/application/api/: main.py
app/application/api/v1/: handlers.py  middleware.py
app/core/: config.py  wait_for_postgres.py
app/infra/: celery.py  postgres.py  redis.py
app/infra/redis/: base.py  redis.py
app/migrations/: env.py
app/migrations/versions/: 0e2caf15d077_add_migrations.py  1b65e7570eae_add_migrations.py  4065adaa4a63_add_migrations.py  43524337c3cf_add_migrations.py  438f5f930a7d_add_migrations.py  4a6d73cc01ef_add_migrations.py  671f44d05a7d_add_migrations.py  6a1e80d18f83_add_migrations.py  7e2364d734d1_add_migrations.py  9388ca521ffc_add_migrations.py  93eca6ac0b4f_add_migrations.py  9706064ac23f_add_migrations.py  9c2d0d13b022_add_migrations.py  b36f3e4f8536_add_migrations.py  bd77d88ca52c_add_migrations.py  da6e403fb024_add_migrations.py  eb4cd697f0eb_add_migrations.py
app/models/: entities.py
app/schemas/: entities.py
app/services/: statistics_service.py  tasks.py  trans_service.py
app/tests/: test_api.py
docker_compose/: redis.yaml
