[tool.poetry]
name = "microservice"
version = "0.1.0"
description = ""
authors = ["xanssun <xanssun@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
