[tool.poetry]
name = "microservice"
version = "0.1.0"
description = ""
authors = ["xanssun <xanssun@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
redis = "^5.2.1"
celery = {extras = ["asyncio"], version = "^5.4.0"}
asyncio = "^3.4.3"
gevent = "^24.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
