[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["xanssun <xanssun@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
redis = "^5.2.1"
celery = {extras = ["asyncio"], version = "^5.4.0"}
asyncio = "^3.4.3"
gevent = "^24.11.1"
eventlet = "^0.38.2"
asgiref = "^3.8.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"
pytest-twisted = "^1.14.3"
pytest-trio = "^0.8.0"
pytest-tornasync = "^0.6.0.post2"
twisted = "^24.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
